--- a/styles.css
+++ b/styles.css
@@ -63,8 +63,9 @@ body {
 }
 
 .directed-by {
-    font-family: 'Oswald', sans-serif;
-    font-weight: 200;
+    font-family: 'Bangla MN', serif;
+    font-weight: 400;
+    font-style: normal;
     letter-spacing: 0.2em;
 }
 
