--- a/styles.css
+++ b/styles.css
@@ -63,9 +63,8 @@ body {
 }
 
 .directed-by {
-    font-family: 'Bangla MN', serif;
-    font-weight: 400;
-    font-style: normal;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 200;
     letter-spacing: 0.2em;
 }
 
