--- a/styles.css
+++ b/styles.css
@@ -357,6 +357,32 @@ body {
     opacity: 0.7;
 }
 
+.footer .license {
+    margin-top: 2rem;
+    font-size: 0.7rem;
+    opacity: 0.7;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 0.2em;
+    line-height: 1.6;
+}
+
+.footer .license a {
+    font-weight: 400;
+    text-decoration: underline;
+}
+
+.cc-icon {
+    max-width: 1em;
+    max-height: 1em;
+    margin-left: 0.15em;
+    vertical-align: middle;
+    opacity: 0.7;
+    display: inline-block;
+}
+
 /* Film Detail Page */
 .film-detail {
     max-width: 1400px;
