--- a/styles.css
+++ b/styles.css
@@ -375,12 +375,13 @@ body {
 }
 
 .cc-icon {
-    max-width: 1em;
-    max-height: 1em;
+    width: 0.9em;
+    height: 0.9em;
     margin-left: 0.15em;
     vertical-align: middle;
     opacity: 0.7;
     display: inline-block;
+    object-fit: contain;
 }
 
 /* Film Detail Page */
