Change grading page to horizontal swipe slider (LOG left, GRADED right), favicon is already blue square

--- a/styles.css
+++ b/styles.css
@@ -404,8 +404,8 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 50%;
+    width: 0%;
+    height: 100%;
     overflow: hidden;
     z-index: 2;
 }
@@ -414,47 +414,32 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 200%;
+    width: 200%;
+    height: 100%;
     object-fit: cover;
+    transform: translateX(-50%);
 }
 
 .before-image {
-    width: 100%;
-    height: 200%;
+    width: 200%;
+    height: 100%;
     object-fit: cover;
-    transform: translateY(-50%);
+    transform: translateX(-50%);
 }
 
-.before-after-slider.vertical .slider-divider {
+.slider-divider {
     position: absolute;
-    top: 50%;
-    left: 0;
-    width: 100%;
-    height: 4px;
+    top: 0;
+    left: 0%;
+    width: 4px;
+    height: 100%;
     background-color: #0000ff;
     z-index: 3;
-    cursor: row-resize;
-    transform: translateY(-50%);
+    cursor: col-resize;
+    transform: translateX(-50%);
 }
 
-.before-after-slider.vertical .before-container {
-    width: 100%;
-    height: 50%;
-    top: 0;
-    left: 0;
-}
-
-.before-after-slider.vertical .before-container .before-image {
-    width: 100%;
-    height: 200%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.before-after-slider.vertical .slider-divider::before {
+.slider-divider::before {
     content: '';
     position: absolute;
     top: 50%;
@@ -468,8 +453,8 @@ body {
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
 
-.before-after-slider.vertical .slider-divider::after {
-    content: '↕';
+.slider-divider::after {
+    content: '↔';
     position: absolute;
     top: 50%;
     left: 50%;
@@ -486,7 +471,7 @@ body {
     width: 100%;
     height: 100%;
     opacity: 0;
-    cursor: row-resize;
+    cursor: col-resize;
     z-index: 4;
     margin: 0;
     -webkit-appearance: none;
@@ -498,13 +483,13 @@ body {
     appearance: none;
     width: 100%;
     height: 100%;
-    cursor: row-resize;
+    cursor: col-resize;
 }
 
 .slider-control::-moz-range-thumb {
     width: 100%;
     height: 100%;
-    cursor: row-resize;
+    cursor: col-resize;
     border: none;
     background: transparent;
 }
